--- a/orders.html
+++ b/orders.html
@@ -45,7 +45,7 @@
 </header>
 
 <div class="heading">
-   <h3>your orders</h3>
+   <h3>Your orders</h3>
    <p><a href="index.html">home </a> <span> / orders</span></p>
 </div>
 
@@ -56,11 +56,11 @@
    <div class="box-container">
 
       <div class="box">
-         <p> placed on : <span>5-29-2022</span> </p>
-         <p> name : <span>shaikh anas</span> </p>
-         <p> number : <span>1234567899</span> </p>
-         <p> email : <span>shaikhanas@gmail.com</span> </p>
-         <p> address : <span>jogeshwari, mumbai, india - 400103</span> </p>
+         <p> placed on : <span>5-29-2024</span> </p>
+         <p> name : <span>Obeng Samuek</span> </p>
+         <p> number : <span>0593942191</span> </p>
+         <p> email : <span>obenginusahsamuel42@gmail.com</span> </p>
+         <p> address : <span>Kumasi Tanoso Campus</span> </p>
          <p> your orders : <span>pizza 01 (1) - main dish 02 (3) -</span> </p>
          <p> total price : <span>$12/-</span> </p>
          <p> payment method : <span>cash on delivery</span> </p>
@@ -69,10 +69,10 @@
 
       <div class="box">
          <p> placed on : <span>5-29-2022</span> </p>
-         <p> name : <span>shaikh anas</span> </p>
-         <p> number : <span>1234567899</span> </p>
-         <p> email : <span>shaikhanas@gmail.com</span> </p>
-         <p> address : <span>jogeshwari, mumbai, india - 400103</span> </p>
+         <p> name : <span>Deku Kelvin</span> </p>
+         <p> number : <span>0574678743</span> </p>
+         <p> email : <span>samnsdnfjhjd@gmail.com</span> </p>
+         <p> address : <span>hchdbjhbjkcbhxjzhjhjads</span> </p>
          <p> your orders : <span>pizza 01 (1) - main dish 02 (3) -</span> </p>
          <p> total price : <span>$70</span> </p>
          <p> payment method : <span>cash on delivery</span> </p>
