--- a/menu.html
+++ b/menu.html
@@ -61,7 +61,7 @@
       <form accept="" method="post" class="box">
          <img src="uploaded_img/pizza-1.png" alt="">
          <a href="category.html" class="cat">fast food</a>
-         <div class="name">delicious pizza 01</div>
+         <div class="name">Hawaii Vegetarian Pizza</div>
          <div class="flex">
             <div class="price"><span>$</span>70</div>
          </div>
@@ -70,7 +70,7 @@
       <form accept="" method="post" class="box">
          <img src="uploaded_img/dish-1.png" alt="">
          <a href="#" class="cat">dishes</a>
-         <div class="name">main dish 01</div>
+         <div class="name">Noodles</div>
          <div class="flex">
             <div class="price"><span>$</span>30</div>
          </div>
@@ -79,7 +79,7 @@
       <form accept="" method="post" class="box">
          <img src="uploaded_img/burger-1.png" alt="">
          <a href="#" class="cat">fast food</a>
-         <div class="name">chezzy hamburger 01</div>
+         <div class="name">Cheeseburger</div>
          <div class="flex">
             <div class="price"><span>$</span>25</div>
          </div>
@@ -88,7 +88,7 @@
       <form accept="" method="post" class="box">
          <img src="uploaded_img/dessert-1.png" alt="">
          <a href="#" class="cat">dessert</a>
-         <div class="name">delicious dessert 01</div>
+         <div class="name">Fresh Orange Juice</div>
          <div class="flex">
             <div class="price"><span>$</span>10</div>
          </div>
@@ -97,7 +97,7 @@
       <form accept="" method="post" class="box">
          <img src="uploaded_img/drink-1.png" alt="">
          <a href="#" class="cat">drinks</a>
-         <div class="name">fresh drink 01</div>
+         <div class="name">Strawberry Smoothie</div>
          <div class="flex">
             <div class="price"><span>$</span>12</div>
          </div>
@@ -106,7 +106,7 @@
       <form accept="" method="post" class="box">
          <img src="uploaded_img/dish-2.png" alt="">
          <a href="#" class="cat">dishes</a>
-         <div class="name">main dish 02</div>
+         <div class="name">Mushroom Noodles</div>
          <div class="flex">
             <div class="price"><span>$</span>15</div>
          </div>
@@ -115,7 +115,7 @@
       <form accept="" method="post" class="box">
          <img src="uploaded_img/burger-2.png" alt="">
          <a href="#" class="cat">fast food</a>
-         <div class="name">chezzy hamburger 02</div>
+         <div class="name">Chickenburger</div>
          <div class="flex">
             <div class="price"><span>$</span>25</div>
          </div>
@@ -124,7 +124,7 @@
       <form accept="" method="post" class="box">
          <img src="uploaded_img/pizza-2.png" alt="">
          <a href="#" class="cat">fast food</a>
-         <div class="name">delicious pizza 02</div>
+         <div class="name">Hawaii Vegetarian Pizzza with Chili</div>
          <div class="flex">
             <div class="price"><span>$</span>10</div>
          </div>
@@ -133,7 +133,7 @@
       <form accept="" method="post" class="box">
          <img src="uploaded_img/dessert-2.png" alt="">
          <a href="#" class="cat">dessert</a>
-         <div class="name">delicious dessert 02</div  >
+         <div class="name">Chocolate Cake</div  >
          <div class="flex">
             <div class="price"><span>$</span>35</div>
          </div>
