--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
             <img src="uploaded_img/pizza-1.png" alt="">
             <a href="category.html" class="cat">fast food</a>
-            <div class="name">delicious pizza 01</div>
+            <div class="name">Hawaii Vegetarian Pizza</div>
             <div class="flex">
                <div class="price"><span>$</span>70</div>
 
@@ -189,7 +189,7 @@
 
             <img src="uploaded_img/dish-1.png" alt="">
             <a href="category.html" class="cat">dishes</a>
-            <div class="name">main dish 01</div>
+            <div class="name">Noodles</div>
             <div class="flex">
                <div class="price"><span>$</span>30</div>
             </div>
@@ -200,7 +200,7 @@
 
             <img src="uploaded_img/burger-1.png" alt="">
             <a href="category.html" class="cat">fast food</a>
-            <div class="name">chezzy hamburger 01</div>
+            <div class="name">Cheeseburger</div>
             <div class="flex">
                <div class="price"><span>$</span>25</div>
 
@@ -210,7 +210,7 @@
          <form accept="" method="post" class="box">
             <img src="uploaded_img/dessert-1.png" alt="">
             <a href="category.html" class="cat">dessert</a>
-            <div class="name">delicious dessert 01</div>
+            <div class="name">Fresh Orange Juice</div>
             <div class="flex">
                <div class="price"><span>$</span>10</div>
 
@@ -220,7 +220,7 @@
          <form accept="" method="post" class="box">
             <img src="uploaded_img/drink-1.png" alt="">
             <a href="category.html" class="cat">drinks</a>
-            <div class="name">fresh drink 01</div>
+            <div class="name">Strawberry Smoothie</div>
             <div class="flex">
                <div class="price"><span>$</span>12</div>
 
@@ -230,7 +230,7 @@
          <form accept="" method="post" class="box">
             <img src="uploaded_img/dish-2.png" alt="">
             <a href="category.html" class="cat">dishes</a>
-            <div class="name">main dish 02</div>
+            <div class="name">Mushroom Noodles</div>
             <div class="flex">
                <div class="price"><span>$</span>15</div>
 
