--- a/index.html
+++ b/index.html
@@ -301,6 +301,8 @@
 
 <script src="https://cdn.botpress.cloud/webchat/v2/inject.js"></script>
 <script src="https://mediafiles.botpress.cloud/2d67fb4d-24cb-41ca-9d0e-21c19cbab026/webchat/v2/config.js"></script>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+   <script src="js/script.js"></script>
 
    <script>
       var swiper = new Swiper(".home-slider", {
