--- a/index.html
+++ b/index.html
@@ -29,23 +29,20 @@
          <a href="about.html">About</a>
          <a href="menu.html">Menu</a>
          <a href="orders.html">Orders</a>
-         <a href="contact.html">Contact</a>
+      
       </nav>
 
       <div class="icons">
-         <a href="search.html"><i class="fas fa-search"></i></a>
-         <a href="cart.html"><i class="fas fa-shopping-cart"></i><span>(3)</span></a>
          <div id="user-btn" class="fas fa-user"></div>
          <div id="menu-btn" class="fas fa-bars"></div>
       </div>
 
+  
       <div class="profile">
-         <p class="name">Sterling</p>
-         <div class="flex">
-            <a href="profile.html" class="btn">Profile</a>
-            <a href="#" class="delete-btn">Logout</a>
-         </div>
-         <p class="account"><a href="login.html">Login</a> or <a href="register.html">Register</a></p>
+         <p class="name">Sterling Foods</p>
+         <p>Order Via Call</p>
+         <p>+233 24 038 4438</p>
+         <p>+233 59 394 2191</p>
       </div>
 
    </section>
