--- a/about.html
+++ b/about.html
@@ -203,8 +203,8 @@
 </section>
 
 
-<script src="https://cdn.botpress.cloud/webchat/v2/inject.js"></script>
-<script src="https://mediafiles.botpress.cloud/2d67fb4d-24cb-41ca-9d0e-21c19cbab026/webchat/v2/config.js"></script>
+   <script src="https://cdn.botpress.cloud/webchat/v2.1/inject.js"></script>
+<script src="https://mediafiles.botpress.cloud/2d67fb4d-24cb-41ca-9d0e-21c19cbab026/webchat/v2.1/config.js"></script>
 
 <footer class="footer">
 
